--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cute Moodle v1.4.4 - Vendetta Plugin</title>
+    <title>no delete skid</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -51,9 +51,9 @@
     </style>
 </head>
 <body>
-    <h1>Cute Moodle v1.4.4</h1>
+    <h1>antied skid ai</h1>
     <div class="icon">✏️</div>
-    <p><strong>Description:</strong> Keeps a temporary record of deleted messages and any edits until you reload the app. Deleted messages turn ephemeral red with a "This message is deleted!" notice, preserve attachments, and include a dismiss button. Edits are logged in-memory.</p>
+    <p><strong>Description:</strong> antied ai skid 💔💔</p>
     
     <div class="install">
         <h2>Installation</h2>
